video 19 : En este vídeo comenzamos a ver la comunicación entre componentes. Vemos cómo pasar información desde un componente padre a un componente hijo. @Input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,21 +33,25 @@
     </div>
 
   </form>
-</div>
 
-
-<br><br>
-
+<div>
 
 
 
+  
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div *ngFor="let empleado of empleados let i=index">
-        {{i+1}}: {{empleado.nombre}} {{empleado.apellido}} {{empleado.cargo}} {{empleado.salario}}
-      </div>
-    </div>
-  </div>
-</div>
+
+<div></div>
+
+<br><br><br>
+
+
+
+<app-empleado-hijo></app-empleado-hijo>
+
+
+<app-empleado-hijo *ngFor="let empleado of empleados let i=index" [empleadoDeLista]="empleado" [indice]="i"></app-empleado-hijo> 
+
+
+
+
